Secondary nav tab base alignment issue slightly changed

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -130,9 +130,9 @@
 
 .logo {
   float: left;
-  margin-top: -5px;
   position: relative;
   z-index: 1;
+  padding-bottom: 5px;
 }
 
 .links {
